More missing exception checks in String.prototype. https://bugs.webkit.org/show_bug.cgi?id=200762 <rdar://problem/54333896>

Reviewed by Michael Saboff.

JSTests:

* stress/missing-exception-check-in-string-lastIndexOf.js: Added.
* stress/missing-exception-check-in-string-toLower.js: Added.
* stress/missing-exception-check-in-string-toUpper.js: Added.

Source/JavaScriptCore:

* runtime/StringPrototype.cpp:
(JSC::replaceUsingRegExpSearch):
(JSC::operationStringProtoFuncReplaceRegExpString):
(JSC::stringProtoFuncLastIndexOf):
(JSC::stringProtoFuncToLowerCase):
(JSC::stringProtoFuncToUpperCase):


Canonical link: https://commits.webkit.org/214500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248716 268f45cc-cd09-0410-ab3c-d52691b4dbfc