JSTests/stress/missing-exception-check-in-string-lastIndexOf.js
@@ -1,0 +1,9 @@
+const s1 = (-1).toLocaleString().padEnd(2**31-1, 'aa');
+try {
+    s1.lastIndexOf();
+} catch (e) {
+    exception = e;
+}
+
+if (exception != "Error: Out of memory")
+    throw "FAILED";
